<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.cmpt276.as3_minesweeper_sol.HelpActivity"
    android:background="@mipmap/help_background"
    android:clickable="false">

    <TextView
        android:text="@string/cookie_sweeper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView5"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/help_game_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView7"
        android:background="@android:color/background_light"
        android:alpha=".9" />

    <TextView
        android:text="@string/written_by_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView9"
        android:backgroundTint="@android:color/background_light"
        android:alpha=".9"
        android:background="@android:color/background_light"
        android:autoLink="web" />

    <TextView
        android:text="@string/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/resources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:textSize="18sp"
        android:textStyle="normal|bold" />
    <TextView
        android:text="@string/help_resource_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView12"
        android:backgroundTint="@android:color/background_light"
        android:alpha=".9"
        android:background="@android:color/background_light"
        android:clickable="false"
        android:autoLink="web" />


</RelativeLayout>
